@@ -27,8 +27,8 @@
                                 <span class='pl-icon pl-icon-edit' title='Edit'></span>
                             </a>
                         </td>
-                        <td>{{ elem.debut }}</td>
-                        <td>{{ elem.fin }}</td>
+                        <td>{{ elem.debut | date("d/m/Y") }}</td>
+                        <td>{{ elem.fin | date("d/m/Y")  }}</td>
                         <td>{{ elem.texte }}</td>
                     </tr>
                 {% endfor %}
