@@ -2,6 +2,7 @@
 -Fixes
 Fix removal of reccuring absences
 Set default value for start and end hours when saving an absence
+Fix admin info and absences info forms
 
 *** Version 20.04.02       (2020-08-04)   ***
 -Fixes
